# chame

./: .buildinfo  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js
.github/workflows/: docs.yml  pythonpackage.yml
_sources/: index.md.txt
_sources/examples/: chromvar.ipynb.txt
chame/: __init__.py
chame/io/: __init__.py  external.py  read_10x.py
chame/pp/: __init__.py  ranges.py
chame/tl/: __init__.py  chromvar.py
chame/util/: seq.py
docs/: README.md  api.md  conf.py  index.md  references.bib  references.md
docs/examples/: chromvar.ipynb  index.md  ranges.ipynb  seq.ipynb
examples/: 10x_io.html  10x_io.ipynb  archr_io.html  archr_io.ipynb  chromvar.html  index.html  ranges.html  seq.html
src/chame/: __init__.py
src/chame/fragments/: __init__.py  preproc.py  utils.py
src/chame/fragments/pl/: __init__.py  altair.py  plot.py
src/chame/io/: __init__.py  external.py  read_10x.py  utils.py
src/chame/pl/: __init__.py  embeddings.py
src/chame/pl/altair/: __init__.py  embeddings.py  histogram.py
src/chame/pp/: __init__.py  ranges.py
src/chame/ranges/: merge.py
src/chame/tl/: __init__.py  chromvar.py
src/chame/utils/: __init__.py  region.py  seq.py
tests/: test_pp_ranges.py  test_ranges_merge.py  test_tl_chromvar.py  test_util_seq.py
